--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="lib" path="/Users/henry/Git/Linky/libs/bugsense-trace1-1-3.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Development/bugsense-trace1-1-3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
