--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hn.linky"
-    android:versionCode="5"
+    android:versionCode="6"
     android:versionName="@string/versionName" >
 
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="4" />
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.WRITE_SMS" />
-    <uses-permission android:name="android.permission.READ_SMS" /><uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     
     
 	<application android:icon="@drawable/ic_menu_link" android:label="@string/appName">
 	        
-	    <activity android:name=".PasswordFormActivity" 
+	    <activity android:name=".InputLinkedNumberActivity" 
 	        android:label="@string/appName" 
 	        android:icon="@drawable/ic_menu_link" 
 	        android:launchMode="singleTop" 
