--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hn.linky"
-    android:versionCode="5"
+    android:versionCode="6"
     android:versionName="@string/versionName" >
 
     <uses-sdk android:minSdkVersion="4" />
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.WRITE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -43,6 +44,15 @@
             <meta-data android:name="android.appwidget.provider" 
                 android:resource="@xml/send_message_widget_provider" />
         </receiver>
+        
+        
+        <receiver android:name=".SmsReceiver" android:enabled="true">
+      		<intent-filter android:priority="1000">
+        		<action android:name="android.provider.Telephony.SMS_RECEIVED" />
+      		</intent-filter>
+      		
+		</receiver>
+        
         
         <service android:name=".LinkyIntentService" android:label="LinkyIntentService"></service>
 
