- Moved all hard-coded texts into associated strings in strings.xml. - Modified intent-filter android:priority on SmsReceiver to max value of 999. - Minor reformatting of xml values.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hn.linky"
-    android:versionCode="6"
+    android:versionCode="7"
     android:versionName="@string/versionName" >
 
-    <uses-sdk android:minSdkVersion="4" />
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="16" />
     <uses-permission android:name="android.permission.WRITE_SMS" />
-    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS"/>    
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    
-    
-	<application android:icon="@drawable/ic_menu_link" android:label="@string/appName">
+        
+	<application 
+	    android:icon="@drawable/ic_menu_link" 
+	    android:label="@string/appName">
 	        
-	    <activity android:name=".InputLinkedNumberActivity" 
+	    <activity 
+	        android:name=".InputLinkedNumberActivity" 
 	        android:label="@string/appName" 
 	        android:icon="@drawable/ic_menu_link" 
 	        android:launchMode="singleTop" 
@@ -28,34 +31,40 @@
 	        </intent-filter>
 	    </activity>
 	    	    
-	    <activity android:name=".MainActivity" 
+	    <activity 
+	        android:name=".MainActivity" 
 	        android:icon="@drawable/ic_menu_link" 
 	        android:launchMode="singleTop" 
 	        android:allowTaskReparenting="true" 
 	        android:label="@string/appName">       
 	    </activity>
 	    
-        <receiver android:name=".SendMessageWidgetProvider" 
-            android:label="LinkySendMessageWidget">
+        <receiver 
+            android:name=".SendMessageWidgetProvider" 
+            android:label="LinkySendMessageWidget"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="ACTION_WIDGET_SEND_MESSAGE"/>
             </intent-filter>
-            <meta-data android:name="android.appwidget.provider" 
+            <meta-data 
+                android:name="android.appwidget.provider" 
                 android:resource="@xml/send_message_widget_provider" />
         </receiver>
-        
-        
-        <receiver android:name=".SmsReceiver" android:enabled="true">
-      		<intent-filter android:priority="1000">
+                
+        <receiver 
+            android:name=".SmsReceiver" 
+            android:enabled="true" 
+            android:exported="false">
+      		<intent-filter android:priority="999">
         		<action android:name="android.provider.Telephony.SMS_RECEIVED" />
-      		</intent-filter>
-      		
+      		</intent-filter>      		
 		</receiver>
         
-        
-        <service android:name=".LinkyIntentService" android:label="LinkyIntentService"></service>
-
+        <service 
+            android:name=".LinkyIntentService" 
+            android:label="LinkyIntentService">
+        </service>
         
 	</application>
 	
