--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,9 @@
     android:versionCode="7"
     android:versionName="@string/versionName" >
 
-    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="16" />
+    <uses-sdk android:minSdkVersion="4" 
+        android:targetSdkVersion="16" />
+    
     <uses-permission android:name="android.permission.WRITE_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS"/>    
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
