--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-sdk android:minSdkVersion="4" 
         android:targetSdkVersion="16" />
     
+    <uses-feature android:name="android.hardware.camera" />
     <uses-permission android:name="android.permission.WRITE_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS"/>    
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
@@ -15,7 +16,9 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-        
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    
 	<application 
 	    android:icon="@drawable/ic_menu_link" 
 	    android:label="@string/appName">
@@ -38,7 +41,7 @@
 	        android:icon="@drawable/ic_menu_link" 
 	        android:launchMode="singleTop" 
 	        android:allowTaskReparenting="true" 
-	        android:label="@string/appName">       
+	        android:label="@string/appName">
 	    </activity>
 		
 	    <activity
@@ -53,6 +56,7 @@
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="ACTION_SEND_WIDGET_POKE"/>
+                <action android:name="ACTION_INSTAPIC"/>
                 <action android:name="ACTION_SEND_WIDGET_HUGGLE"/>
                 <action android:name="ACTION_SEND_WIDGET_MWAH"/>
                 <action android:name="ACTION_SEND_BUZZ"/>
