--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.BROADCAST_SMS"/>
+    <!-- <uses-permission android:name="android.permission.BROADCAST_SMS"/>  -->
     <uses-permission android:name="android.permission.RECEIVE_MMS"/>
     
 	<application 
@@ -78,7 +78,7 @@
       		</intent-filter>      		
 		</receiver>
         
-        <service android:permission="android.permission.BROADCAST_SMS"
+        <service
             android:name=".LinkyIntentService" 
             android:label="LinkyIntentService">
         </service>
