--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest 
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hn.linky"
-    android:versionCode="11"
+    android:versionCode="@string/versionCode"
     android:versionName="@string/versionName" >
 
     <uses-sdk android:minSdkVersion="4" 
